[package]
name = "bvs-rewards"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69" }

[dev-dependencies]
cw-multi-test = { version = "2.3.2", features = ["cosmwasm_2_0"] }
