[package]
name = "squaring-contract"
version = "0.0.0"
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69" }

bvs-registry = { version = "0.0.0-main.170", path = "../../../crates/bvs-registry" }
bvs-vault-router = { version = "0.0.0-main.170", path = "../../../crates/bvs-vault-router" }

[dev-dependencies]
cw-multi-test = { version = "2.4.0", features = ["cosmwasm_2_0"] }
bvs-multi-test = { version = "0.0.0-main.170", path = "../../../crates/bvs-multi-test" }
