[package]
name = "squaring-contract"
version = "0.0.0"
edition = "2021"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "=2.1.0"
cosmwasm-std = { version = "=2.1.0", features = ["cosmwasm_2_0", ] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69" }

[dev-dependencies]
cw-multi-test = "=2.0.0"
